<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.flowcentraltech.flowcentral</groupId>
  <artifactId>flowcentral</artifactId>
  <version>4.2.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>flowcentral</name>
  <description>FlowCentral</description>
  <url>http://www.flowcentralplatform.com</url>
  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>lateefojulari</id>
      <name>Lateef Ojulari</name>
      <email>lateef.ojulari@tcdng.com</email>
      <organization>The Code Department</organization>
      <organizationUrl>http://www.tcdng.com</organizationUrl>
    </developer>
  </developers>
  <modules>
    <module>flowcentral-system</module>
    <module>flowcentral-common</module>
    <module>flowcentral-configuration</module>
    <module>flowcentral-security</module>
    <module>flowcentral-application</module>
    <module>flowcentral-organization</module>
    <module>flowcentral-studio</module>
    <module>flowcentral-report</module>
    <module>flowcentral-notification</module>
    <module>flowcentral-workflow</module>
    <module>flowcentral-chart</module>
    <module>flowcentral-dashboard</module>
    <module>flowcentral-delegate</module>
    <module>flowcentral-codegeneration</module>
    <module>flowcentral-connect-common</module>
    <module>flowcentral-connect-configuration</module>
    <module>flowcentral-connect-springboot</module>
    <module>flowcentral-connect-unify</module>
    <module>flowcentral-javax</module>
    <module>flowcentral-jetty</module>
    <module>flowcentral-collaboration</module>
    <module>flowcentral-workspace</module>
    <module>flowcentral-integration</module>
    <module>flowcentral-integration-activemq</module>
    <module>flowcentral-integration-rabbitmq</module>
    <module>flowcentral-tomcat</module>
    <module>flowcentral-undertow</module>
    <module>flowcentral-audit</module>
    <module>flowcentral-messaging</module>
    <module>flowcentral-messaging-os</module>
    <module>flowcentral-messaging-os-data</module>
    <module>flowcentral-repository</module>
    <module>flowcentral-repository-git</module>
    <module>flowcentral-layouts</module>
    <module>flowcentral-themes</module>
    <module>flowcentral-integration-rest</module>
    <module>flowcentral-web-ui</module>
    <module>flowcentral-fontawesome</module>
    <module>flowcentral-test</module>
    <module>flowcentral-chart-echarts</module>
    <module>flowcentral-report-organization</module>
    <module>flowcentral-studio-organization</module>
    <module>flowcentral-workflow-organization</module>
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <unify.version>4.2.0-SNAPSHOT</unify.version>
  </properties>
  <scm>
    <connection>
			scm:git:git://github.com/flowcentraltechnologies/flowcentral.git</connection>
    <developerConnection>
			scm:git:ssh://github.com:flowcentraltechnologies/flowcentral.git</developerConnection>
    <url>http://github.com/flowcentraltechnologies/flowcentral/tree/master</url>
  </scm>
  <profiles>
    <profile>
      <id>deploy-artifacts-sonatype</id>
      <activation>
        <property>
          <name>repoDeployMode</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <additionalOptions>
                <additionalOption>-Xdoclint:none</additionalOption>
              </additionalOptions>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.8.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>sonatype-nexus-staging</publishingServerId>
              <autoPublish>true</autoPublish>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <distributionManagement>
        <snapshotRepository>
          <id>sonatype-nexus-snapshots</id>
          <name>Central Portal Snapshots</name>
          <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </snapshotRepository>
        <repository>
          <id>sonatype-nexus-staging</id>
          <name>Central Portal Release</name>
          <url>https://central.sonatype.com/service/local/staging/deploy/maven2/</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>
  <repositories>
    <repository>
      <id>maven-snapshots</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugin</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <debug>true</debug>
            <debugLevel>lines,vars,source</debugLevel>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.6</version>
          <executions>
            <execution>
              <goals>
                <goal>test-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencies>
    <!-- Main dependencies -->
    <!-- Test dependencies -->
    <dependency>
      <groupId>com.tcdng.unify</groupId>
      <artifactId>unify-core</artifactId>
      <version>${unify.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.tcdng.unify</groupId>
      <artifactId>unify-web</artifactId>
      <version>${unify.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.tcdng.unify</groupId>
      <artifactId>unify-web-ui</artifactId>
      <version>${unify.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.9</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.3.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
